docs: полное обновление README под v2.2 — динамические JVM, UDP оптимизация, config.json, BSON-формат